--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     margin: 0;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    height: 30px;
+    
+}
+
 .container {
     display: flex;
     background-color: red;
@@ -19,7 +29,6 @@
 }
 
 .innerDiv {
-    background-color: blueviolet;
-    border: 2px solid black;
+    background-color: white;
     flex: 1;
 }
