--- a/style.css
+++ b/style.css
@@ -2,47 +2,84 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h1 {
+    color: aqua;
+    transition: font-size 0.5s; 
+}
+
+h1:hover {
+    font-size: 80px;
 }
 
 body {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    background-color: gray;
 }
-
+.control {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 50px;
+    padding: 50px;
+    flex: 1;
+    align-items: center;
+    background-color: grey;
+}
 button {
     height: 30px;
     width: 200px;
-    align-self: center;
-
+    transition: background-color 0.5s, width 0.2s, height 0.2s;
+}
+button:hover {
+    background-color: aquamarine;
+    height: 40px;
+    width: 266.7px;
 }
 label {
+    color: lightcyan;
     display: flex;
-    gap: 5px;
-    padding-top: 10px;
+}
+
+input:hover {
+    width: 120px;
+    height: 30px;
+}
+input {
+    width: 100px;
+    transition: width 0.2s, height 0.2s;
+}
+
+button {
+    background-color: rgb(101, 238, 101);
+    border-radius: 10px;
+}
+label {
     width: 200px;
-    justify-content: center;
-    align-items: center;
     padding-bottom: 5px;
 }
 
-input, label {
-    align-self: center;
-}
 .container {
     display: flex;
-    background-color: red;
     flex-direction: column;
     min-height: 100vh;
+    width: 100vh;
+    align-self: left;
+    border: brown 2px solid;
+    border-radius: 10px;
+    background-color: white;
 
 }
 
 .column {
     display: flex;
     flex: 1;
-    background-color: blue;
 }
 
 .innerDiv {
-    background-color: white;
     flex: 1;
+    border: 1px lightgray dashed;
 }
